systemtap (1.2-1) experimental; urgency=low

  * New maintainer. Closes: #568866.
  * New upstream release.
    - Fixes CVE-2009-4273. Closes: #568865.
  * Removed patches:
    - xmlto-test.diff: applied upstream.
    - dont-remove-scripts.diff: applied upstream.
    - examples-shebangs.diff: applied upstream.
  * Refreshed patches:
    - use-pdflatex.diff
    - debversion.diff
    - new-elfutils.diff
  * Bump policy to 3.8.4. No changes needed.

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Mon, 17 May 2010 23:17:10 +0200

systemtap (1.1-1) experimental; urgency=low

  * New upstream release
    - too many changes, upload to experimental for now
  * Fix Vcs-Browser url
  * Update debian/copyright
  * Pass --disable-publican to configure, not usable in Debian
  * Removed patches:
    - no-PROCFLAGS.diff - fixed upstream
    - no-xmto.diff - let's try to use xmlto..., build depend on it
    - stap-env.diff - no longer needed
    - SystemTap-1.0-limit-printf-arguments.patch - fixed upstream
    - SystemTap-1.0-limit-dwarf-expression-stack-size.patch - fixed upstream
    - SystemTap-1.0-unwind-table-size-checks.patch - fixed upstream
  * Updated patches:
    - dont-build-pdfdocs.diff
    - grapher-libs.diff 
  * Build-depend on libboost-dev and libglademm-2.4-dev, needed for grapher
  * New patches:
    - dont-remove-scripts.diff - do not remove scripts on clean
    - examples-shebangs.diff - add missing shebangs to examples
    - xmlto-test.diff - use html format to test xmlto, txt format requires
      additional build-dependencies

 -- Євгеній Мещеряков <eugen@debian.org>  Thu, 21 Jan 2010 14:45:25 +0100

systemtap (1.0-2) unstable; urgency=high

  * Fix multiple DoS issues (CVE-2009-2911), thanks to Moritz Muehlenhoff
    fo reporting. Urgency is high because of security bug.
    (closes: 551918)
  * New patches (stolen from RedHat's bugzilla):
    - SystemTap-1.0-limit-printf-arguments.patch
    - SystemTap-1.0-limit-dwarf-expression-stack-size.patch